--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ dependencies = [
     "pydantic-settings>=2.10.1",
     "pyodbc>=5.2.0",
     "python-jose>=3.5.0",
+    "redis>=6.4.0",
     "requests>=2.32.5",
     "sqlalchemy>=2.0.43",
+    "sseclient>=0.0.27",
     "uvicorn>=0.35.0",
 ]
