--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "azure-identity>=1.25.0",
     "fastapi>=0.116.2",
+    "faststream>=0.5.48",
     "pydantic-settings>=2.10.1",
     "pyodbc>=5.2.0",
     "python-jose>=3.5.0",
